# async-chat-room

./: .gitignore  CMakeLists.txt  Readme.md
glad/: glad.c  glad.h
src/client/: client_reader.cpp  client_reader.hpp  client_writer.cpp  client_writer.hpp  clientmain.cpp  clientmain.h  event_queue.cpp  event_queue.hpp  main.cpp  state.hpp
src/client/gui/: client_gui.cpp  client_gui.hpp  glfw_init.cpp  glfw_init.hpp  gui_include.hpp
src/connection/: netinclude.h  s_connection.h  s_packet.h  s_tsqueue.h  tuple-serial.h
src/server/: server.cpp  server.h
